Tue Mar 22 11:36:49 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (wmul): wrong condition.
	  fixed many test failures on 32bit and LLP64 platforms.

Tue Mar 22 10:31:34 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (wdiv, wmod): wdivmod0() assumes the 3rd and the 4th arguments
	  are valid pointers.
	  maybe checking them in wdivmod0() is better manner, but I guess that
	  passing real dummy pointers may be faster than checking and branching
	  in wdivmod0().
	  this commit fixes SEGV on 32bit and LLP64 platforms.

Tue Mar 22 10:24:04 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (divmodv): void function never returns any value.

Tue Mar 22 10:11:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/lib/test/unit.rb (Test::Unit::StatusLine#failed): print
	  failed messages only if replacing mode, otherwise defer them
	  until the end, to get rid of interleaving failures with progress
	  messages.  refix r54195.

Tue Mar 22 03:45:03 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (MUL_OVERFLOW_FIXWV_P): defined for FIXWV.

	* time.c (wmul): use MUL_OVERFLOW_FIXWV_P and only switch.

	* time.c (wmul): use mul which has Fixnum optimization.

	* time.c (rb_time_magnify): If WIDEVALUE_IS_WIDER, wmul() has the same
	  optimized logic, else mul() has also the similar logic for Fixnum.

	* time.c (rb_time_unmagnify): almost ditto.

Tue Mar 22 03:10:09 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (divmodv): add the case both arguments are Fixnum.

	* time.c (wquo): use quo which has Fixnum optimization.

	* time.c (wdivmod0): added for WIDEVALUE_IS_WIDER.

	* time.c (wdivmod): use wdivmod0 and divmodv.
	  divmodv has Fixnum optimization.

	* time.c (wdiv): use wdivmod0 and div to avoid the use of divmodv which
	  calls id_quo whose return value is array.

	* time.c (wmod): use wdivmod0 and mod to avoid the use of divmodv which
	  calls id_quo whose return value is array.

Mon Mar 21 22:32:50 2016  NARUSE, Yui  <naruse@ruby-lang.org>
